fix: api-key leaked

--- a/firebase.json
+++ b/firebase.json
@@ -1,37 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "android": {
-        "default": {
-          "projectId": "alley-fibonacci",
-          "appId": "1:654848717191:android:72c969deeb7cc393e46322",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "alley-fibonacci",
-          "configurations": {
-            "android": "1:654848717191:android:72c969deeb7cc393e46322",
-            "ios": "1:654848717191:ios:9c0c4e50889119f4e46322",
-            "web": "1:654848717191:web:5ecfb366d46bebf9e46322"
-          }
-        }
-      }
-    }
-  },
-  "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
-}
+{"flutter":{"platforms":{"android":{"default":{"projectId":"alley-fibonacci","appId":"1:654848717191:android:72c969deeb7cc393e46322","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"alley-fibonacci","configurations":{"android":"1:654848717191:android:72c969deeb7cc393e46322","ios":"1:654848717191:ios:9c0c4e50889119f4e46322","web":"1:654848717191:web:5ecfb366d46bebf9e46322"}}}}},"hosting":{"public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]}}
